syntax = "proto3";

package customer.events;
option java_multiple_files = true;

message CustomerEvent {
  string customerId = 1;
  string event_type = 2;
  string event_detail = 3;
}